// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mask renders 0 1`] = `
Array [
  .c0 {
  -webkit-mask: 0;
  mask: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask: 0;
  mask: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask: 0;
  mask: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask: 0;
  mask: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`mask renders function 1`] = `
Array [
  .c0 {
  -webkit-mask: hasnot;
  mask: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask: has;
  mask: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask: hasnot;
  mask: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask: has;
  mask: has;
}

<div
    className="c0"
  />,
]
`;

exports[`mask renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-mask: invalid.path.1;
  mask: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask: invalid.path.1;
  mask: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask: invalid.path.1;
  mask: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask: invalid.path.1;
  mask: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`mask renders negative number 1`] = `
Array [
  .c0 {
  -webkit-mask: -54881;
  mask: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask: -54881;
  mask: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask: -42365;
  mask: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask: -42365;
  mask: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`mask renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-mask: July;
    mask: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask: August;
    mask: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask: September;
    mask: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask: November;
    mask: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-mask: July;
    mask: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask: August;
    mask: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask: September;
    mask: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask: November;
    mask: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask: May;
    mask: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask: June;
    mask: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask: April;
    mask: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask: November;
    mask: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask: May;
    mask: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask: June;
    mask: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask: April;
    mask: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask: November;
    mask: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`mask renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-mask: July;
    mask: July;
  }
}

@media April {
  .c0 {
    -webkit-mask: August;
    mask: August;
  }
}

@media January {
  .c0 {
    -webkit-mask: September;
    mask: September;
  }
}

@media April {
  .c0 {
    -webkit-mask: November;
    mask: November;
  }
}

@media June {
  .c0 {
    -webkit-mask: August;
    mask: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-mask: July;
    mask: July;
  }
}

@media April {
  .c0 {
    -webkit-mask: August;
    mask: August;
  }
}

@media January {
  .c0 {
    -webkit-mask: September;
    mask: September;
  }
}

@media April {
  .c0 {
    -webkit-mask: November;
    mask: November;
  }
}

@media June {
  .c0 {
    -webkit-mask: August;
    mask: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask: January;
    mask: January;
  }
}

@media April {
  .c0 {
    -webkit-mask: December;
    mask: December;
  }
}

@media January {
  .c0 {
    -webkit-mask: April;
    mask: April;
  }
}

@media April {
  .c0 {
    -webkit-mask: May;
    mask: May;
  }
}

@media June {
  .c0 {
    -webkit-mask: June;
    mask: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask: January;
    mask: January;
  }
}

@media April {
  .c0 {
    -webkit-mask: December;
    mask: December;
  }
}

@media January {
  .c0 {
    -webkit-mask: April;
    mask: April;
  }
}

@media April {
  .c0 {
    -webkit-mask: May;
    mask: May;
  }
}

@media June {
  .c0 {
    -webkit-mask: June;
    mask: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`mask renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-mask: 54881;
  mask: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask: 54881;
  mask: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask: 42365;
  mask: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask: 42365;
  mask: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`mask renders string 1`] = `
Array [
  .c0 {
  -webkit-mask: July;
  mask: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask: July;
  mask: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask: June;
  mask: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask: June;
  mask: June;
}

<div
    className="c0"
  />,
]
`;

exports[`mask renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-mask: DarkSlateBlue;
  mask: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask: DarkSlateBlue;
  mask: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask: DarkSlateBlue;
  mask: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask: DarkSlateBlue;
  mask: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
